updating to do Heroku

--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
 
 <!--Navigation Bar-->
 
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">techMentors: Seattle</a>
+      <a class="navbar-brand" href="#">techMentors</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,7 +36,7 @@
 
 <div class="row" id="main">
       <div class="col-12" id="mainImage">
-        <img src="../assets/img/tm01.jpg" id="mainImage"alt="abstract image of cropped face">
+        <img src="./assets/img/tm01.jpg" id="mainImage"alt="abstract image of cropped face">
         <div class="centered">techMentors</div>
         <div class="centered" id=subheading>coding assistance for boot camp students</div>
       </div>
@@ -45,8 +45,8 @@
 <!--Main 2 Buttons-->
 
 <div class= "container">
-    <button type="button" class="btn btn-info" id= "firstButton">Find a Mentor</button>
-    <button type="button" class="btn btn-info" id= "secondButton">Be a Mentor</button>
+    <button type="button" class="btn btn-info" id= "firstButton" href="./public/mentorList.html">Find a Mentor</button>
+    <button type="button" class="btn btn-info" id= "secondButton" href="./public/mentorApplication.html">Be a Mentor</button>
 </div>
 
     
