updating routes, html, css, etc

--- a/public/index.html
+++ b/public/index.html
@@ -41,14 +41,13 @@
         <div class="centered" id=subheading>coding assistance for boot camp students</div>
       </div>
     </div>
-
+<br>
 <!--Main 2 Buttons-->
 
 <div class= "container">
-    <button type="button" class="btn btn-info" id= "firstButton" href="./public/mentorList.html">Find a Mentor</button>
-    <button type="button" class="btn btn-info" id= "secondButton" href="./public/mentorApplication.html">Be a Mentor</button>
+  <a href= "/mentorlist"> <button type="button" class="btn btn-info" id= "firstButton"><b>Find one</b></button></a>
+  <a href= "/mentorApplication"> <button type="button" class="btn btn-info" id= "secondButton"><b>Be one</b></button></a>
 </div>
-
     
   </body>
 </html>
