--- a/public/mentorList.html
+++ b/public/mentorList.html
@@ -55,7 +55,7 @@
               <option value = "Job Prep/Interview Questions"> Job Prep/Interview Questions </option>
             </select>
 
-        <h5>My time zone is:</h5>
+          <h5>My time zone is:</h5>
             <select class="chosen-select" id="selectTimeZone">
               <option value = "UTC-11: Samoa Standard Time"> UTC-11: Samoa Standard Time </option>
               <option value = "UTC-10 Hawaii-Aleutian Standard Time (HST)"> UTC-10 Hawaii-Aleutian Standard Time (HST) </option>
@@ -76,34 +76,11 @@
 <!--The start of the template for the Mentor List results-->
 
 <!--Name of Mentor-->
-<div class = "container">
-    <div class="wrapper">
-        <div class="col-md-3" id="mentorPic">
-          <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
-        </div>
-        <div class="col-md-9" id="mentorName">
-            <h6>Mentor:</h6>
-            </div>
-        <div class="col-md-9" id="primaryHelp">
-          <h6>What I can help with:</h6>
-          </div>
-          <div class="col-md-9" id="gradSchool">
-              <h6>I graduated from:</h6>
-            </div>
-          <div class="col-md-9" id="mentorTimeZone">
-              <h6>My time zone:</h6>
-              </div>
-          <div class="col-md-9" id="describe">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique,
-            nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae
-            felis vulputate pretium. 
-          </p>
-        </div>
-      </div>
-    </div>
-
-    </div>
+<div class = container>
+  <div class='mentorList'>
+ 
+  </div> 
+</div>  
 
 
       <script src= "https://code.jquery.com/jquery-3.4.1.js"></script>
