fixing some styling issues

--- a/public/mentorApplication.html
+++ b/public/mentorApplication.html
@@ -19,7 +19,7 @@
 <!--Navigation Bar-->
 
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">techMentors</a>
+      <a class="navbar-brand" href="/">techMentors</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -68,10 +68,10 @@
                     <input type="radio" id="classAssignment" name="primaryHelp" class="custom-control-input" value="Class Assignment">
                     <label class="custom-control-label" for="classAssignment">Class assignment</label>
                   </div>
-                  <div class="custom-control custom-radio">
+                  <!--<div class="custom-control custom-radio">
                     <input type="radio" id="resume" name="primaryHelp" class="custom-control-input" value="Specific Coding Problem">
                     <label class="custom-control-label" for="resume">Specific Coding Problem</label>
-                  </div>
+                  </div> -->
                   <div class="custom-control custom-radio">
                     <input type="radio" id="resume" name="primaryHelp" class="custom-control-input" value="Resume/Personal Branding">
                     <label class="custom-control-label" for="resume">Resume/Personal Branding</label>
@@ -79,7 +79,7 @@
                   <div class="custom-control custom-radio">
                     <input type="radio" id="jobPrep" name="primaryHelp" class="custom-control-input" value="Job prep/Interview Questions">
                     <label class="custom-control-label" for="jobPrep">Job prep/Interview Questions</label>
-                      </div>
+                  </div>
         </div>
     </div>
 <!--Institute Graduated-->
@@ -147,6 +147,30 @@
     <div class="form-row">
         <div class="col-md-6 mb-3" id="profilePic">
         <h5> Lastly, add a picture of yourself. Help mentees put a face to your name.</h5>
+
+
+
+
+
+
+        <div class="file-field input-field">
+            <button class="btn" id="pic-button">
+            Upload a picture of yourself
+            <input type="file" id="pic-file" accept="image/*">
+            </button>
+            <div class="file-path-wrapper">
+            </div>
+            
+        </div>
+
+
+
+
+
+
+
+
+
       </div>
   </div>
 
