--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
 <!--Navigation Bar-->
 
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">techMentors</a>
+      <a class="navbar-brand" href="/">techMentors</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
           </li>
         <span class="navbar-text">[enter text here]</span>
       </div>
