--- a/public/mentorList.html
+++ b/public/mentorList.html
@@ -19,7 +19,7 @@
 <!--Navigation Bar-->
 
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">techMentors</a>
+    <a class="navbar-brand" href="/">techMentors</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -81,7 +81,6 @@
  
   </div> 
 </div>  
-
 
       <script src= "https://code.jquery.com/jquery-3.4.1.js"></script>
       <script src="assets/js/mentorList.js"></script>
